Fix inspection warnings and modernize team utilities